--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,18 @@ services:
   flask:
     build: ./flask           # 指向相关镜像的Dockerfile所在目录
     container_name: flask
+    ports:
+      - "5000:5000"
+    #  - "8085:8085"
     restart: always
-    environment:             # 配置容器的环境变量
-      - APP_NAME=movie
+    #environment:             # 配置容器的环境变量
+    #  - APP_NAME=app
     expose:                  # 将该容器的8080端口开放给同一网络下的其他容器和服务
-      - 8085
+      - 5000
 
   nginx:
-    build: ./nginx
-    container_name: nginx
-    restart: always
-    ports:                   # HOST:CONTAINER 将主机的80端口映射到容器的80端口，相当于将nginx容器的80端口开放给外部网络
-      - "80:80"
+   build: ./nginx
+   container_name: nginx
+   restart: always
+   ports:                   # HOST:CONTAINER 将主机的80端口映射到容器的80端口，相当于将nginx容器的80端口开放给外部网络
+     - "81:81"
