--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,44 +1,56 @@
-alembic==1.0.0
-asn1crypto==0.24.0
-bleach==2.1.4
+aniso8601==8.0.0
+Appium-Python-Client==0.26
+APScheduler==3.5.1
+atomicwrites==1.4.0
+attrs==20.1.0
+bcrypt==3.2.0
 blinker==1.4
-cffi==1.11.5
-click==6.7
-cryptography==2.3.1
-dominate==2.3.1
-enum34==1.1.6
-Flask==1.0.2
-Flask-Bootstrap==3.3.7.1
-Flask-HTTPAuth==3.2.4
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.2.1
-Flask-Moment==0.6.0
-Flask-PageDown==0.2.2
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+cryptography==3.1.1
+decorator==4.4.2
+demjson==2.2.4
+docutils==0.16
+Flask==0.11
+Flask-APScheduler==1.8.0
+Flask-Login==0.2.11
+Flask-Mail==0.9.0
+Flask-RESTful==0.3.6
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-ForgeryPy==0.1
-freeze==1.0.10
-html5lib==1.0.1
-httplib2==0.11.3
-idna==2.7
-ipaddress==1.0.22
-itsdangerous==0.24
-Jinja2==2.10
-Mako==1.0.7
-Markdown==2.6.11
-MarkupSafe==1.0
-pycparser==2.18
-PyMySQL==0.9.2
+Flask-SSLify==0.1.5
+idna==2.6
+importlib-metadata==1.7.0
+iniconfig==1.0.1
+itsdangerous==1.1.0
+Jinja2==2.8
+kitchen==1.2.6
+MarkupSafe==1.1.1
+more-itertools==8.4.0
+packaging==20.4
+paramiko==2.7.2
+pluggy==0.13.1
+py==1.9.0
+pycparser==2.20
+PyNaCl==1.4.0
+pyparsing==2.4.7
+pytest==6.0.1
 python-dateutil==2.7.3
-python-editor==1.0.3
-selenium==3.14.1
-six==1.11.0
-SQLAlchemy==1.2.11
-urllib3==1.24
-virtualenv==16.0.0
-visitor==0.1.3
-webencodings==0.5.1
+pytz==2020.1
+requests==2.18.4
+robot==20071211
+robotframework==3.0.3
+robotframework-appiumlibrary==1.4.6
+robotframework-databaselibrary==1.0.1
+robotframework-requests==0.4.7
+robotframework-seleniumlibrary==3.1.1
+robotframework-sshlibrary==3.1.1
+selenium==3.141.0
+six==1.15.0
+toml==0.10.1
+tzlocal==2.1
+urllib3==1.22
 Werkzeug==0.14.1
-WTForms==2.2.1
+zipp==3.1.0
